# actix-web-security-samples

./: README.md
oauth-resource-server/backend/: .env  Cargo.toml  README.md
oauth-resource-server/backend/migrations/: 20210216211829_INSERT_ADMIN_USER.sql  V01__CREATE_INITIAL_SCHEMA.sql
oauth-resource-server/backend/src/: main.rs
oauth-resource-server/backend/src/api/: controller.rs  extractors.rs  mod.rs
oauth-resource-server/backend/src/api/request/: converter.rs  mod.rs  resource.rs
oauth-resource-server/backend/src/api/response/: assembler.rs  mod.rs  resources.rs
oauth-resource-server/backend/src/error/: mod.rs
oauth-resource-server/backend/src/model/: mod.rs  unregistered_user.rs  user.rs
oauth-resource-server/backend/src/repository/: user_repository.rs
oauth-resource-server/backend/src/security/: mod.rs  user_authorization_component.rs  user_details_service.rs
oauth-resource-server/docker/: backup-keycloak-realm-config.sh  create-databases.sh  create-pgadmin-connection.sh  docker-compose.yml  down.sh  servers.json  up.sh
oauth-resource-server/web-app/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
oauth-resource-server/web-app/e2e/src/: app.e2e-spec.ts
oauth-resource-server/web-app/src/: index.html  styles.scss
oauth-resource-server/web-app/src/app/: app.module.ts
oauth-resource-server/web-app/src/app/interceptor/: error-interceptor.ts
oauth-resource-server/web-app/src/app/resources/: list-resource.ts
oauth-resource-server/web-app/src/environments/: environment.prod.ts  environment.ts
(+38 files in other folders)
