[package]
name = "resource-server-sample"
version = "0.1.0"
authors = ["Christian Schaible <cschaible@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5" # MIT OR Apache-2.0
actix-http = "2.2" # MIT OR Apache-2.0
actix-web = "3" # MIT OR Apache-2.0
actix-web-security = { version = "0.1.0-alpha.2", features = ["jwk-default-loader"] } # MIT OR Apache-2.0
anyhow = "1.0" # MIT OR Apache-2.0
async-trait = "0.1" # MIT OR Apache-2.0
derive_more = "0.99" # MIT
dotenv = "0.15" # MIT
env_logger = "0.8" # MIT/Apache-2.0
jsonwebtoken = "7.2" # MIT
log = "0.4" # MIT OR Apache-2.0
refinery = { version = "0.5", features = ["postgres"] } # MIT
serde = "1" # MIT OR Apache-2.0
serde_json = "1" # MIT OR Apache-2.0
sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "postgres", "uuid", "chrono"] } # MIT OR Apache-2.0
url = "2.2" # MIT/Apache-2.0
uuid = { version = "0.8", features = ["serde", "v4"] } # Apache-2.0 OR MIT

# Overwrite version to prevent build errors caused by funty 1.2.0
# See: https://github.com/myrrlyn/funty/issues/3
funty = "=1.1.0"

[profile.release]
opt-level = 3
lto = true